link to 'further details'

--- a/examples/family/workbook.xhtml
+++ b/examples/family/workbook.xhtml
@@ -369,7 +369,11 @@ The story so far is:
 <img src="julio-claudian.svg" alt="Julio-Claudian family tree, the story so far" />
 
 <p class="note">
-The unknown parent of Drusus and Tiberius looks like a good next target; but rather than making this worked example more complicated, I'll continue the effort <a href="/history/roman/family.xhtml">elsewhere</a>.
+The unknown parent of Drusus and Tiberius looks like a good next target ... 
+</p>
+
+<p class="note">
+Rather than making this worked example more complicated, I'll continue the effort elsewhere: See my [Julio-Claudian Family Tree](/history/roman/family) page for further details.
 </p>
 
 </body>
