--- a/examples/family/workbook.xhtml
+++ b/examples/family/workbook.xhtml
@@ -373,7 +373,7 @@ The unknown parent of Drusus and Tiberius looks like a good next target ...
 </p>
 
 <p class="note">
-Rather than making this worked example more complicated, I'll continue the effort elsewhere: See my [Julio-Claudian Family Tree](/history/roman/family) page for further details.
+Rather than making this worked example more complicated, I'll continue the effort elsewhere: See my <a href="/history/roman/family">Julio-Claudian Family Tree</a> page for further details.
 </p>
 
 </body>
