--- a/history/roman/family.xhtml
+++ b/history/roman/family.xhtml
@@ -18,7 +18,7 @@
 
 <h2>The Julio-Claudian family tree</h2>
 <p class="note">
-This is a 'workbook' pulling together facts and arguments needed to construct a Julio-Claudian family tree from historical text. See the [family tree worked example](/examples/family/workbook.xhtml) for a simpler version that includes explanation of the process.
+This is a 'workbook' pulling together facts and arguments needed to construct a Julio-Claudian family tree from historical text. See the <a href="/examples/family/workbook.xhtml">family tree worked example</a> for a simpler version that includes explanation of the process.
 </p>
 
 <article about="urn:cts:latinLit:phi1348.abo012.perseus-eng1:4">
