further work on examples

--- a/history/roman/family.xhtml
+++ b/history/roman/family.xhtml
@@ -113,7 +113,7 @@ After quitting Macedonia, before he could declare himself a candidate for the co
 	</div>
 	
 	<div class="analysis" about="urn:cts:latinLit:phi1348.abo012.perseus-eng1:62">
-		<p class="question">Is Augustus the father of Marcus Agrippa, or of Julia the Elder?</p>
+		<p class="question">Is Augustus the father of Marcus Agrippa, or the father of Julia the Elder?</p>
 	</div>
 
 </article>
@@ -347,7 +347,7 @@ And yet Augustus had appointed Germanicus, Drusus's offspring, to the command of
 	
 	<div class="nlp">
 		<ul>
-			<li class="claim">Germanicus is the offspring of <span content="Drusus the Elder">Drusus</span>.</li>
+			<li class="claim">Germanicus is the offspring of <span class="person" content="Drusus the Elder">Drusus</span>.</li>
 			<li class="claim">Germanicus is the adopted son of Tiberius.</li>
 		</ul>
 	</div>
@@ -585,12 +585,12 @@ Tiberius meanwhile having himself in person bestowed the hand of his granddaught
 	<p class="note">The order of this list implies a sequence (partial order) in time:</p>
 	
 	<div class="nlp">
-		<ul>
+		<ol>
 			<li class="claim">Augustus is married to Claudia.</li>
 			<li class="claim">Augustus is married to Scribonia.</li>
 			<li class="claim">Livia Drusilla is married to Tiberius Nero.</li>
 			<li class="claim">Augustus is married to Livia Drusilla.</li>
-		</ul>
+		</ol>
 	</div>
 
 </article>
