update "superintelligence" workbook

--- a/debate/ai/superintelligence.xhtml
+++ b/debate/ai/superintelligence.xhtml
@@ -27,22 +27,16 @@
 		<p class="ref"><a href="https://search.worldcat.org/search?q=isbn%3A9780199678112">Bostrom, N. (2017)</a></p> <!-- ch 5,  ch 8.. -->
 
 		<p class="note">Given the premise of a superintelligence ...</p>
-		<blockquote>
+		<blockquote about="this:superintelligence">
 			<em>Superintelligence</em>: Any intellect that greatly exceeds the cognitive performance of humans in virtually all domains of interest. 
 		</blockquote>
 	</div>
 	
 	<p class="note">... that forms a singleton ...</p>
 	<div about="this:1">
-		<blockquote about="this:singletonclaim">
-			The initial superintelligence might obtain a decisive strategic advantage. This superintelligence would then be in a position to form a a singleton.
+		<blockquote class="premise" about="this:singletonclaim">
+			The <span class="premise refer" about="this:superintelligence">initial superintelligence</span> <span class="support">might obtain a decisive strategic</span> advantage. This superintelligence would then be in a position to form a <span class="conclusion refer" about="this:singleton">singleton</span>.
 		</blockquote>
-		
-		<div about="this:singletonclaim" class="analysis">
-			<p class="question">
-				What is a singleton? 
-			</p>
-		</div>
 	</div>
 
 	<div about="this:1">
@@ -98,10 +92,27 @@
 	
 </article>
 
+<br/>
+<hr/>
+<article id="later">
+	<p class="note">Later, after pitting the above against <a href="both-ways.xhtml">other arguments</a>, a point to consider is how "the singleton" relates to "the technical singularity":</p>
+	
+	<div about="this:1">
 
+		<p class="ref"><a href="https://search.worldcat.org/search?q=isbn%3A9780199678112">Bostrom, N. (2017)</a></p> <!-- ch 5,  ch 8.. -->
+
+		<blockquote class="premise" about="this:explosion">
+			The singularity-related idea that interests us here is <span class="support">the possibility of an intelligence explosion</span>, particularly the prospect of <span class="conclusion refer" about="this:superintelligence">machine superintelligence</span>.
+		</blockquote>
+	</div>
+
+</article>
+
+<br/>
+<hr/>
 <h3>Argument map</h3>
 <p>
-<a href="AIF/superintelligence.txt">
+<a href="AIF/superintelligence.xml">
 <img class="medium" src="images/superintelligence.svg" alt="argument map for the superintelligence claims" />
 </a>
 </p>
