--- a/debate/ai/chalmers.xhtml
+++ b/debate/ai/chalmers.xhtml
@@ -31,35 +31,48 @@
 
 <p class="note">Chalmers constructs the argument in stages. Firstly, he lays out the argument for singularity ...</p>
 <p>
-<a href="AIF/chalmers.txt">
 <img class="medium" src="images/chalmers1.svg" alt="the singularity argument" />
-</a>
 </p>
 
 <p class="note">Next, he justifies the premises. Firstly, two different arguments in support of 'the equivalence premise' ...</p>
 <p>
-<a href="AIF/chalmers.txt">
 <img class="large" src="images/chalmers2.svg" alt="the equivalence premise" />
-</a>
 </p>
 
 <p class="note">Then, an argument in support of 'the extension premise' ...</p>
 <p>
-<a href="AIF/chalmers.txt">
 <img class="medium" src="images/chalmers3.svg" alt="the extension premise" />
-</a>
 </p>
 
 <p class="note">Finally, an argument in support of 'the amplification premise' ...</p>
 <p>
-<a href="AIF/chalmers.txt">
 <img class="medium" src="images/chalmers4.svg" alt="the amplification premise" />
-</a>
 </p>
-
 	
 </article>
 
+<p class="note">
+Chalmers' analysis is concerned with the singularity as a superintelligent AI, avoiding the question of 'human control'. He also avoids getting bogged down in precise timescales. He takes the heat out of that side of the debate by suggesting that 'before long' 
+might mean 'within centuries', and 'soon after' might mean 'within decades'.
+</p>
+
+<p class="note">
+In the remainder of the article, Chalmers considers and counters possible defeaters.
+Later, he publishes <a href="https://consc.net/papers/singreply.pdf">The Singularity: A Reply</a>. This analyses (and references) 26 
+responses to his original article. There's lots to unpick ...
+</p>
+
+
+<p class="note">
+I have a working argument map that captures all of the above. I'm building the arguments as GraphML (drawing the arguments map in yEd) rather than XHTML+RDFa.
+I generate AIF from the GraphML, which (currently) looks like this:
+</p>
+
+<p>
+<a href="AIF/chalmers.xml">
+<img class="large" src="images/chalmers-all.svg" alt="the singularity analysis" />
+</a>
+</p>
 
 </body>
 </html>
