--- a/debate/ai/chalmers.xhtml
+++ b/debate/ai/chalmers.xhtml
@@ -29,22 +29,22 @@
 
 <p class="ref"><a href="https://consc.net/papers/singularityjcs.pdf">Chalmers, D. (2016)</a></p> 
 
-<p class="note">Chalmers constructs the argument in stages. Firstly, he lays out the argument for singularity ...</p>
+<p class="note" id="singularity">Chalmers constructs the argument in stages. Firstly, he lays out the argument for singularity ...</p>
 <p>
 <img class="medium" src="images/chalmers1.svg" alt="the singularity argument" />
 </p>
 
-<p class="note">Next, he justifies the premises. Firstly, two different arguments in support of 'the equivalence premise' ...</p>
+<p class="note" id="equivalence">Next, he justifies the premises. Firstly, two different arguments in support of 'the equivalence premise' ...</p>
 <p>
 <img class="large" src="images/chalmers2.svg" alt="the equivalence premise" />
 </p>
 
-<p class="note">Then, an argument in support of 'the extension premise' ...</p>
+<p class="note" id="extension">Then, an argument in support of 'the extension premise' ...</p>
 <p>
 <img class="medium" src="images/chalmers3.svg" alt="the extension premise" />
 </p>
 
-<p class="note">Finally, an argument in support of 'the amplification premise' ...</p>
+<p class="note" id="amplification">Finally, an argument in support of 'the amplification premise' ...</p>
 <p>
 <img class="medium" src="images/chalmers4.svg" alt="the amplification premise" />
 </p>
