--- a/debate/ai/accelerating-returns.xhtml
+++ b/debate/ai/accelerating-returns.xhtml
@@ -33,8 +33,8 @@
 			
 	</div>
 		
-	<div about="this:1">
-		<blockquote>
+	<div>
+		<blockquote about="this:1">
 			There's even exponential growth in the rate of exponential growth. 
 		</blockquote>
 	</div>
@@ -42,7 +42,7 @@
 	<div class="analysis">
 		<ul>
 			<li class="premise aside">
-				<span class="premise refer" about="core:accelerating-returns">The law of accelerating returns</span> <span class="support">leads inevitably to</span> <span class="conclusion refer" about="core:singularity">the singularity</span>.
+				<span class="premise refer" about="core:accelerating-returns">The law of accelerating returns</span> <span class="support">leads</span> <span class="premise refer" about="this:1">inevitably</span> to <span class="conclusion refer" about="core:singularity">the singularity</span>.
 			</li>
 		</ul>
 	</div>
@@ -54,6 +54,14 @@
 	</div>
 		
 </article>
+
+
+<h3>Argument map</h3>
+<p>
+<a href="AIF/accelerating-returns.xml">
+<img class="medium" src="images/kurzweil.svg" alt="argument map for the law of accelerating returns" />
+</a>
+</p>
 
 
 <article>
@@ -106,8 +114,8 @@
 
 <h3>Argument map</h3>
 <p>
-<a href="AIF/accelerating-returns.txt">
-<img class="medium" src="images/kurzweil.svg" alt="argument map for the law of accelerating returns" />
+<a href="AIF/accelerating-returns.xml">
+<img class="medium" src="images/kurzweil-update.svg" alt="argument map for the law of accelerating returns" />
 </a>
 </p>
 
