added definition of intelligence

--- a/examples/debate/ai/intelligence.xhtml
+++ b/examples/debate/ai/intelligence.xhtml
@@ -61,14 +61,32 @@
 	<div about="https://www.simplypsychology.org/intelligence.html">
 		<p class="ref"><a href="https://www.simplypsychology.org/intelligence.html">SimplyPsychology</a></p>
 
-		<blockquote>
+		<blockquote about="this:ih">
 			Intelligence refers to the mental capacity to learn from experiences, adapt to new situations, understand and handle abstract concepts, 
 			and use knowledge to manipulate one’s environment. 
 			It includes skills such as problem-solving, critical thinking, learning quickly, and understanding complex ideas. 
-		</blockquote>
+		</blockquote>			
 	</div>
 	
+	<div class="analysis">
+		<ul>
+			<li class="premise aside">
+				<span class="premise refers" about="this:ih">This</span> is a definition of human intelligence, so <span class="support">applies</span> to <span class="conclusion refers" about="this:p1">"an individual agent"</span>.
+			</li>
+			<li class="premise aside">
+				<span class="premise refers" about="this:ih">It</span> also <span class="support">relates intelligence</span> to <span class="conclusion refers" about="this:p3">interaction with the environment</span>.
+			</li>
+		</ul>
+	</div>
+
 </article>
+
+<h3>Argument map</h3>
+<p>
+<a href="AIF/intelligence.xml">
+<img class="medium" src="images/intelligence.svg" alt="argument map for the definition of intelligence" />
+</a>
+</p>
 
 </body>
 </html>
