added "levels of AGI" arguments

--- a/examples/debate/ai/questions.xhtml
+++ b/examples/debate/ai/questions.xhtml
@@ -46,6 +46,11 @@
 
 <p class="question">Can an <strong>agent</strong> change its goals?</p>
 </article>
+
+<article>
+<p class="question">If goals are expressed in terms of a utility function, what sort of mathematical object does that function produce?</p>
+</article>
+
 </body>
 
 </html>
