--- a/examples/debate/ai/singularity.xhtml
+++ b/examples/debate/ai/singularity.xhtml
@@ -83,7 +83,7 @@
 
 <h3>Argument map</h3>
 <p>
-<a href="AIF/singularity.txt">
+<a href="AIF/singularity.xml">
 <img class="medium" src="images/singularity.svg" alt="argument map for the singularity claim" />
 </a>
 </p>
