updated accelerating returns argument

--- a/examples/debate/ai/accelerating-returns.xhtml
+++ b/examples/debate/ai/accelerating-returns.xhtml
@@ -56,56 +56,50 @@
 </article>
 
 
-<h3>Argument map</h3>
-<p>
-<a href="AIF/accelerating-returns.xml">
-<img class="medium" src="images/kurzweil.svg" alt="argument map for the law of accelerating returns" />
-</a>
-</p>
-
-
 <article>
 	<div about="this:2">
 		<p class="ref"><a href="https://www.thekurzweillibrary.com/kurzweils-law-aka-the-law-of-accelerating-returns">Kurzweil, R. (2004)</a></p>
 
 		<p class="note">
-		This is a later update. The case made for "evolutionary processes", biological as well as technical. I've selected the technical case. Just claims at the moment - I haven't
-		wired them up.
+		This is a later update. The case made for "evolutionary processes", biological as well as technical. I've selected the technical case.
 		</p>
 		
-		<blockquote>
+		<blockquote about="this:2p1">
 			Technology, like any evolutionary process, builds on itself. This aspect will continue to accelerate when the technology itself takes full control of its own progression.
 		</blockquote>
 	</div>
 	
 	<div about="this:2">
-		<blockquote>
+		<blockquote about="this:2p2">
 			The resources underlying the exponential growth of an evolutionary process are relatively unbounded. 
 		</blockquote>
 	</div>
 	
 	<div about="this:2">
-		<blockquote>
+		<blockquote about="this:2p3">
 			One resource is the (ever-growing) order of the evolutionary process itself.  
 		</blockquote>
 	</div>
 	
 	<div about="this:2">
-		<blockquote>
+		<blockquote about="this:2p4">
 			The other required resource is the "chaos" of the environment in which the evolutionary process takes place and which provides the options for further diversity.
 		</blockquote>
 	</div>
 	
 	<div about="this:2">
-		<blockquote>
+		<blockquote about="this:2p5">
 			In technological evolution, human ingenuity combined with ever-changing market conditions keep the process of innovation going.  
 		</blockquote>
 	</div>
 	
 		<p class="note">This is the law of accelerating returns, now Kurzweil's law, again:</p>
 	<div about="this:2">
-		<blockquote>
-			In an evolutionary process, positive feedback increases order exponentially. A correlate is that the “returns” of an evolutionary process (such as the speed, cost-effectiveness, or overall “power” of a process) increase exponentially over time — both for biology and technology.  
+		<blockquote about="this:2c" class="conclusion">
+			In an evolutionary process, <span class="support">positive feedback increases order exponentially</span>. 
+			A correlate is that the <span class="premise refer" about="this:2p4">“returns”</span> of an <span class="premise refer" about="this:2p3">evolutionary process</span> (such as the speed, cost-effectiveness, or overall “power” of a process) 
+			<span class="premise refer" about="this:2p5">increase</span> exponentially over time — both for 
+			<span class="premise refer" about="this:2p2">biology</span> and <span class="premise refer" about="this:2p1">technology</span>.  
 		</blockquote>
 	</div>
 
@@ -115,7 +109,7 @@
 <h3>Argument map</h3>
 <p>
 <a href="AIF/accelerating-returns.xml">
-<img class="medium" src="images/kurzweil-update.svg" alt="argument map for the law of accelerating returns" />
+<img class="medium" src="images/kurzweil.svg" alt="argument map for the law of accelerating returns" />
 </a>
 </p>
 
