added "AI Drives" argument

--- a/examples/debate/ai/superintelligence.xhtml
+++ b/examples/debate/ai/superintelligence.xhtml
@@ -68,13 +68,11 @@
 		</blockquote>
 		
 		<div about="this:instrumental-convergence" class="analysis">
-		<p class="question">
-			What are these instrumental subgoals? 
-			<!-- 
-			<span class="answer">
-			They are the AI drives identified by Omohundro.
+		<p>
+			<span class="question">What are these instrumental subgoals?</span>
+			<span>
+			They are the <a href="drives.xhtml">AI drives</a> identified by Omohundro.
 			</span>
-			 -->
 		</p>
 		</div>
 		
