equate Muller and Cannon's restated argument with Bostrom's original

--- a/examples/debate/ai/both-ways.xhtml
+++ b/examples/debate/ai/both-ways.xhtml
@@ -37,7 +37,7 @@
 			<li class="premise">
 				Taken together, the <span class="premise refer" about="core:singularity">singularity claim</span> 
 				and <span class="premise refer" about="bostrom:orthogonality">orthogonality thesis</span>
-				<span class="support" about="this:infer1">may amount to</span> 
+				<span class="support" about="bostrom:supportextinction">may amount to</span> 
 				<span class="conclusion" about="core:extinction">an existential threat from AI.</span>
 			</li> 
 		</ul>
@@ -50,7 +50,7 @@
 	<blockquote class="premise" about="this:concern">
 		Our concern is with the validity of the argument: It appears that for each of the two premises to be charitably interpreted as true, 
 		they must be interpreted as using the term ‘intelligence’ in different ways. <span class="conflict">If that is the case, they cannot be combined as premises</span> into a valid 
-		argument for <span class="undercut" about="this:infer1">existential risk from AI</span>. 
+		argument for <span class="undercut" about="bostrom:supportextinction">existential risk from AI</span>. 
 	</blockquote>
 	
 	</div>
