--- a/examples/debate/ai/superintelligence.xhtml
+++ b/examples/debate/ai/superintelligence.xhtml
@@ -84,7 +84,7 @@
 		<blockquote class="premise">
 			<span class="ellipsis">[Given a <span class="premise refer" about="this:singleton">singleton</span>, <span class="premise refer" about="this:orthogonality">the orthogonality thesis</span>, 
 			<span class="premise refer" about="this:instrumental-convergence">the instrumental convergence thesis</span>] </span>
-			The <span class="support">outcome could easily be</span> one in which <span class="conclusion" about="core:extinction">humanity quickly becomes extinct</span>.
+			The <span class="support" about="this:supportextinction">outcome could easily be</span> one in which <span class="conclusion" about="core:extinction">humanity quickly becomes extinct</span>.
 		</blockquote>
 	</div>
 	
